# trial-schedule

./: README.md  package-lock.json  package.json
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/app/: Buttons.tsx  CaseDetail.tsx  Cells.tsx  ContextMenu.tsx  DateSelectModal.tsx  ScheduleSection.tsx  ScheduleTable.tsx  TimeTable.tsx  Toast.tsx  TwoHourColumn.tsx  globals.css  layout.tsx  page.tsx  provider.tsx
src/app/components/: AddInfoModal.tsx  Buttons.tsx  CaseDetail.tsx  CategoryModal.tsx  Cells.tsx  ContextMenu.tsx  DateSelectModal.tsx  MenuSection.tsx  ScheduleSection.tsx  TimeTable.tsx
src/app/components/icons/: ArrowEnterIcon.tsx  DeleteIcon.tsx  EditIcon.tsx  InfoIcon.tsx
src/app/components/modals/: AddInfoModal.tsx  CategoryModal.tsx  DateAddModal.tsx  DateSelectModal.tsx
src/app/components/timetable/: CaseDetail.tsx  Cells.tsx  ContextMenu.tsx  TimeTable.tsx
src/app/store/: CheckListProvider.tsx  DataProvider.tsx  TimeTableProvider.tsx  ToastProvider.tsx
src/app/ui/: Toast.tsx  main-title.tsx
src/lib/: cell.ts  constants.ts  contextMenu.ts  dataHandleFunc.ts  dataReducer.ts  dataType.ts  errorHandleFunc.ts  saveDataType.ts  settings.ts  tcList.ts  temp.ts  useButtons.tsx  useExcel.ts  useExcel.tsx  useSchedule.ts
src/lib/hooks/: useExcel.ts  useInfoHandler.ts
src/lib/reducers/: checkListReducer.ts  dataReducer.ts
src/models/: tcModel.ts
