[package]
name = "trial_schedule_app"
version = "0.1.0"
description = "Trial Schedule App"
authors = ["RedTraining"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.0.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.0.6", features = ["tray-icon"] }
tauri-plugin-log = "2.0.0-rc"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
calamine = "0.26.1"
json = "0.12.4"
